# libks

./: .gitignore  CMakeLists.txt  Doxyfile
examples/: CMakeLists.txt
examples/multithreaded/: async_sort.c  async_sort.test.py  http_hello_world.c  http_hello_world.test.py  parallel_sort.c  tcp_counting_blackhole.c  tcp_echo_server.c  tcp_echo_server.test.py  tcp_sleep_or_greet.c
examples/singlethreaded/: tcp_blackhole.c  tcp_blackhole.test.py  tcp_ping_pong_server.c  tcp_ping_pong_server.test.py  tcp_single_echo.c  tcp_single_echo.test.py  tcp_single_hello.c  tcp_single_hello.test.py
include/: ks.h
include/ks/: alloc.h  io.h  ipv4.h  ret.h  tcp.h
include/ks/log/: thlog.h
src/: aio.c  aio.h  alloc.c  event_loop.c  idles.c  loop.c  macros.h  ret.c  shared.h  tcp.c  worker.c  worker.h  wq.c  wq.h
src/async/: aio.c  aio.h  idles.c  idles.h  shared.h  task.h  tcp.c  worker.c  worker.h
src/async/queues/: batch.c  batch.h  global.c  global.h  local.c  local.h
src/etc/: macros.h
src/io/: ipv4_addr.c
src/log/: thlog.c
test/: CMakeLists.txt  expect.h  ipv4.test.c  loop_run_empty.test.c  loop_run_works-multi.test.c  loop_run_works-single.test.c  loop_run_works.test.c  wq_fifo.test.c  wq_pushes_batches_to_global.test.c
